dejo el tracking de esto
archivos para ignorar

otro archivo para ignorar

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 .vs/ClubPilot/FileContentIndex/71d2b725-ddef-4cbe-a9d3-512079070a1d.vsidx
+ClubPilot/bin/Debug/ClubPilot.exe
+ClubPilot/bin/Debug/ClubPilot.pdb
+.vs/ClubPilot/FileContentIndex/4c1231a1-ffb6-4e2b-aef5-e8c04bef4dbc.vsidx
+.vs/ClubPilot/v17/.suo
+.vs/ClubPilot/v17/DocumentLayout.backup.json
+.vs/ClubPilot/v17/DocumentLayout.json
+ClubPilot/obj/Debug/ClubPilot.exe
+ClubPilot/obj/Debug/ClubPilot.pdb
+.vs/ClubPilot/FileContentIndex/bf27a054-8dfd-435b-94ee-053a639cd5af.vsidx
+*.vsidx
