El Comobox de contraseña ahora muestra asteriscos

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ ClubPilot/bin/Debug/ClubPilot.pdb
 *.vsidx
 ClubPilot/obj/Debug/ClubPilot.pdb
 ClubPilot/obj/Debug/ClubPilot.exe
+ClubPilot/obj/Debug/ClubPilot.csproj.GenerateResource.cache
