implementacion de la conexión a la base de datos en el archivo DatabaseConnection y el login en la base de datos

--- a/ClubPilot/ClubPilot.csproj
+++ b/ClubPilot/ClubPilot.csproj
@@ -123,6 +123,7 @@
       <DependentUpon>clubs.cs</DependentUpon>
     </Compile>
     <Compile Include="Connection.cs" />
+    <Compile Include="DatabaseConnection.cs" />
     <Compile Include="Esdeveniments.cs">
       <SubType>Form</SubType>
     </Compile>
