--- a/ClubPilot/ClubPilot.csproj
+++ b/ClubPilot/ClubPilot.csproj
@@ -110,6 +110,12 @@
     <Compile Include="AddAccount.Designer.cs">
       <DependentUpon>AddAccount.cs</DependentUpon>
     </Compile>
+    <Compile Include="Add_Esdeveniment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add_Esdeveniment.Designer.cs">
+      <DependentUpon>Add_Esdeveniment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Add_News.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,6 +129,7 @@
       <DependentUpon>clubs.cs</DependentUpon>
     </Compile>
     <Compile Include="Connection.cs" />
+    <Compile Include="Esdeveniment.cs" />
     <Compile Include="Esdeveniments.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -163,6 +170,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AddAccount.resx">
       <DependentUpon>AddAccount.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Add_Esdeveniment.resx">
+      <DependentUpon>Add_Esdeveniment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Add_News.resx">
       <DependentUpon>Add_News.cs</DependentUpon>
