--- a/ClubPilot/ClubPilot.csproj
+++ b/ClubPilot/ClubPilot.csproj
@@ -171,6 +171,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Teams.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Teams.Designer.cs">
+      <DependentUpon>Teams.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Accounts.resx">
       <DependentUpon>Accounts.cs</DependentUpon>
     </EmbeddedResource>
@@ -250,7 +256,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ILLink\ILLink.Descriptors.LibraryBuild.xml" />
+    <None Include="Resources\jugadors.png" />
+    <None Include="Resources\esdeveniments.png" />
+    <None Include="Resources\equips.png" />
+    <None Include="Resources\icons8-club-40.png" />
     <Content Include="Resources\LogoApp.png" />
+    <None Include="Resources\noticies.png" />
+    <None Include="Resources\usuaris.png" />
+    <None Include="Resources\solClubs1.png" />
+    <None Include="Resources\solClubs.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
